# full_env

./: .gitignore  Makefile  README.md  activate  conftest.py  mkvenv  mkvenv_full  requirements.txt
examples/: ReadME.md  pytest.ini
examples/tests/: conftest.py
examples/tests/test_appserve/: conftest.py  test_utils.py  utils.py
examples/tests/test_examples/: test_example1.py  test_file.json
src/itron.meter.pkg/: MANIFEST  MANIFEST.in  README.md  README.txt  pyproject.toml  pytest.ini  requirements.txt  version_data.json
src/itron.meter.pkg/itron/meter/: AbstractMeter.py  AgentMan.py  AsMan.py  FwMan.py  Gen5Meter.py  MeterDB.py  MeterInstance.py  MeterMan.py  RemoteSSH.py  RemoteSSH_paramiko.py  Repack.py  Walker.py  didc.py  expect.py  remoteserial.py  serialmeter.py  test_asman.py  test_expect.py  test_fwman.py  uart.py  utils.py
src/itron.meter.pkg/itron/plugins/: affinitysched.py  metersched.py  parallel.py  parse_args.py  xdist_meter.py
src/itron.meter.pkg/itron/scripts/: clean_locks  mdb.py  mm.py  otapack.py  signerclient.py
src/itron.meter.pkg/tools/: relay.py  stm.py
