
[project]
name = "rohan.meter.pkg"
version = "1.0.0"
description = "rohan meter package"
authors = [
    {name = "Kurt Godwin", email = "kgodwin@rohan.com"},
]
dependencies = [
    "GitPython>=3.1.27",
    "tblib>=1.7.0",
    "requests>=2.28.0",
    "hidapi>=0.13.1",
    "inquirer>=2.9.2",
    "PyYAML>=6.0",
    "paramiko>=2.11.0",
    "rpyc==5.3.0",
    "pyserial==3.5",
    "xmodem==0.4.6",
    "minimalmodbus==2.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "UNLICENSED"}

[project.scripts]
mm = "rohan.scripts.mm:main"
mdb = "rohan.scripts.mdb:main"
clean_locks = "rohan.scripts.clean_locks:main"
ota-pack = "rohan.scripts.otapack:main"
signer-client = "rohan.scripts.signerclient:main"


[project.entry-points.pytest11]
parallel = "rohan.plugins.xdist_meter"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
